--- a/DIA - 2/index.html
+++ b/DIA - 2/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     
+    <script src="java dia 2/exercicio.txt"></script>
     <script src="dia-2.js"></script>
 </body>
 </html>
